refactor(core): close the authored data types and make them bindable